gpsbabel: use normal distfile from locations that will give it to us via GET; fixes checksum errors reported in #25532
git-svn-id: https://svn.macports.org/repository/macports/trunk@69919 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/gpsbabel/Portfile
+++ b/dports/textproc/gpsbabel/Portfile
@@ -5,7 +5,6 @@ PortSystem          1.0
 
 name                gpsbabel
 version             1.4.1
-set cvstag          [string map {. _} ${version}]
 categories          textproc comms
 license             GPL
 maintainers         snc openmaintainer
@@ -20,12 +19,12 @@ homepage            http://www.gpsbabel.org/
 
 depends_lib         port:expat port:libusb-compat port:zlib
 
-master_sites        http://gpsbabel.cvs.sourceforge.net/viewvc/gpsbabel/gpsbabel/?view=tar&pathrev=gpsbabel_${cvstag}&view=
-distname            ${name}-${name}
-worksrcdir          ${name}
+master_sites        http://ee.archive.ubuntu.com/pub/pkgsrc/distfiles/ \
+                    http://ftp.riken.go.jp/pub/NetBSD/packages/distfiles/
 
-checksums           sha1    b5352e962b94501589f621a864b3cba3f736526a \
-                    rmd160  0b8199f7e5023a028ff8d59d60329bcac9791a95
+checksums           md5     512c4acfb12e20102fa5ceacef45a356 \
+                    sha1    28d891887487a3ff4b4433e1320124956be96e61 \
+                    rmd160  67918d040451b98187725f196fe019eea34a6468
 
 configure.args      --with-zlib=system --with-expathdr=${prefix}/include --with-libexpat=${prefix}/lib
 
