--- a/dports/perl/p5-file-libmagic/Portfile
+++ b/dports/perl/p5-file-libmagic/Portfile
@@ -4,8 +4,7 @@ PortSystem		1.0
 
 PortGroup		perl5 1.0
 
-version			0.96
-perl5.setup		File-LibMagic ${version}
+perl5.setup		File-LibMagic 0.96
 revision		0
 extract.suffix	.tgz
 maintainers		ricci
