py25-subvertpy, py26-subvertpy: update to 0.7.3 and add new maintainer; see #25764
git-svn-id: https://svn.macports.org/repository/macports/trunk@69921 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-subvertpy/Portfile
+++ b/dports/python/py26-subvertpy/Portfile
@@ -4,9 +4,9 @@ PortSystem        1.0
 PortGroup         python26 1.0
 
 name              py26-subvertpy
-version           0.7.2
+version           0.7.3
 categories        python devel
-maintainers       nomaintainer
+maintainers       gmail.com:danchr openmaintainer
 platforms         darwin
 description       Alternative Python bindings for Subversion (svn)
 long_description  Alternative Python bindings for Subversion, split out \
@@ -14,12 +14,13 @@ long_description  Alternative Python bindings for Subversion, split out \
   Python bindings.
 
 homepage          https://launchpad.net/subvertpy/
-master_sites      ${homepage}trunk/${version}/+download
+master_sites      ${homepage}trunk/${version}/+download \
+                  http://samba.org/~jelmer/subvertpy
 distname          subvertpy-${version}
 
-checksums         md5     01e2098db04ddddaf06a7e27c075745d \
-                  sha1    f8eb472084d771eb1ae7a67517ecd1061d548759 \
-                  rmd160  b57be7948eb87bed7861c23ed3da5bf8c070eb73
+checksums         md5     2fba8b634774d384e326a3818a1a51a4 \
+                  sha1    e9d8b207cfffeafe3317d0739a0bfd0ef7f2aa53 \
+                  rmd160  475c5006e0c9f1355f011031b512a5b8a1d13f67
 
 depends_lib-append  port:subversion
 
