--- a/dports/python/py25-subvertpy/Portfile
+++ b/dports/python/py25-subvertpy/Portfile
@@ -4,9 +4,9 @@ PortSystem        1.0
 PortGroup         python25 1.0
 
 name              py25-subvertpy
-version           0.6.8
+version           0.7.3
 categories        python devel
-maintainers       nomaintainer
+maintainers       gmail.com:danchr openmaintainer
 platforms         darwin
 description       Alternative Python bindings for Subversion (svn)
 long_description  Alternative Python bindings for Subversion, split out \
@@ -14,18 +14,25 @@ long_description  Alternative Python bindings for Subversion, split out \
   Python bindings.
 
 homepage          https://launchpad.net/subvertpy/
-master_sites      ${homepage}trunk/${version}/+download
+master_sites      ${homepage}trunk/${version}/+download \
+                  http://samba.org/~jelmer/subvertpy
 distname          subvertpy-${version}
 
-checksums         md5     7075b971301fa8efa5fae4021fa9b087 \
-                  sha1    f867df7b54ae32a13d18a7de4c0ccad3ebe6c171 \
-                  rmd160  ce5c41b678aed28d73ddddb74ea6b845ffc490ef
+checksums         md5     2fba8b634774d384e326a3818a1a51a4 \
+                  sha1    e9d8b207cfffeafe3317d0739a0bfd0ef7f2aa53 \
+                  rmd160  475c5006e0c9f1355f011031b512a5b8a1d13f67
 
 depends_lib-append  port:subversion
 
 build.env-append  SVN_PREFIX=${prefix}
 
 destroot.env-append  SVN_PREFIX=${prefix}
+
+post-destroot {
+        foreach f [glob -directory ${destroot}${prefix}/bin *] {
+                file rename ${f} ${f}-${python.branch}
+        }
+}
 
 livecheck.type    regex
 livecheck.url     ${homepage}/+download
