--- a/dports/graphics/wxWidgets/Portfile
+++ b/dports/graphics/wxWidgets/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 PortGroup               archcheck 1.0
 
 name			wxWidgets
+conflicts		wxgtk wxWidgets-python
 epoch			2
 version			2.8.11
 categories		graphics devel
