--- a/dports/x11/wxgtk/Portfile
+++ b/dports/x11/wxgtk/Portfile
@@ -3,7 +3,7 @@
 PortSystem      1.0
 
 name            wxgtk
-conflicts       wxWidgets-python
+conflicts       wxWidgets wxWidgets-python
 version         2.8.4
 revision        3
 categories      x11
