hs-language-c: disable universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@69924 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/hs-language-c/Portfile
+++ b/dports/devel/hs-language-c/Portfile
@@ -18,3 +18,6 @@ checksums               md5     4e0360b6439bd8d6519cec6bc213d906 \
 
 depends_build-append    port:hs-platform-happy \
                         port:hs-platform-alex
+
+# hs-platform-alex and hs-platform-happy are not universal
+universal_variant       no
