netcdf: avoid detecting Fortran compilers available for Mac (#25700). Making sure docs are not rebuilt (#25481)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69925 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/netcdf/Portfile
+++ b/dports/science/netcdf/Portfile
@@ -6,7 +6,7 @@ PortSystem                  1.0
 name                        netcdf
 epoch                       1
 version                     4.1.1
-revision                    2
+revision                    3
 maintainers                 takeshi openmaintainer
 platforms                   darwin
 categories                  science
@@ -28,6 +28,11 @@ checksums                   md5     79c5ff14c80d5e18dd8f1fceeae1c8e1 \
 
 patch {
     reinplace {/^AM_CPPFLAGS/s/\(\$(am__append_5)\) \(\$(am__append_7)\)/\2 \1/} ${worksrcpath}/ncdump/Makefile.in
+    foreach f {configure libcf/configure udunits/configure} {
+        foreach c {g77 g95 gfortran ifort xlf xlf90} {
+            reinplace "s|$c||" $worksrcpath/$f
+        }
+    }
 }
 
 configure.cppflags-append   -DNDEBUG
@@ -47,6 +52,9 @@ test.target                 check
 destroot.destdir            prefix=${destroot}${prefix} \
                             MANDIR=\\\${prefix}/share/man
 
+post-build {
+    system "cd ${worksrcpath}/man4; touch *.dvi *.ps *.pdf"
+}
 post-destroot {
     file delete -force ${destroot}${prefix}/share/man/whatis.db
 }
