libhsplasma: update to 585
git-svn-id: https://svn.macports.org/repository/macports/trunk@69926 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -3,8 +3,7 @@
 PortSystem                  1.0
 
 name                        libhsplasma
-version                     0.0-548
-revision        1
+version                     0.0-585
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -20,7 +19,7 @@ long_description            libHSPlasma is a library for reading files used \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/libhsplasma
-hg.tag                      e3221b3852ed
+hg.tag                      df78076691f2
 
 depends_lib                 port:zlib \
                             port:jpeg \
@@ -34,6 +33,13 @@ configure.args              --with-pkgconfig \
                             --with-zlib=${prefix} \
                             --with-jpeg=${prefix} \
                             --with-ssl=${prefix}
+
+# Prevent problems building when a previous version is installed.
+pre-configure {
+    if {[file exists ${prefix}/lib/libHSPlasma.dylib]} {
+        return -code error "deactivate your existing version of ${name} before attempting to build the new one"
+    }
+}
 
 build.args                  CXX=${configure.cxx}
 
