--- a/dports/python/py-pyxg/Portfile
+++ b/dports/python/py-pyxg/Portfile
@@ -1,28 +1,28 @@
-# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem    1.0
-PortGroup     python24 1.0
+PortSystem      1.0
+PortGroup       python24 1.0
 
-name          py-pyxg
-version       0.2.0
-categories    python devel
-platforms     darwin
-maintainers   snc openmaintainer
-description PyXG provides a Python interface to Apple's Xgrid
-long_description  Xgrid is Apple's solution for running jobs on a cluster \
-of Macintosh computers. PyXG enables users to submit and manage Xgrid jobs \
-on a cluster from a Python script or within an interactive Python session.
+name            py-pyxg
+version         0.2.0
+categories      python devel
+platforms       darwin
+maintainers     snc openmaintainer
+description     PyXG provides a Python interface to Apple's Xgrid
+long_description  Xgrid is Apple's solution for running jobs \
+                on a cluster of Macintosh computers. PyXG enables users to \
+                submit and manage Xgrid jobs on a cluster from a Python script \
+                or within an interactive Python session.
 
-homepage      http://pyxg.scipy.org/
-master_sites  http://pyxg.scipy.org/downloads
-distname      PyXG-${version}
+homepage        http://pyxg.scipy.org/
+master_sites    http://pyxg.scipy.org/downloads
+distname        PyXG-${version}
 
-checksums     md5 9611586e60cf872cf47281fd81ccb5e4
+checksums       md5 9611586e60cf872cf47281fd81ccb5e4
 
-depends_lib   port:py-bdist_mpkg \
-              port:py-pyobjc
+depends_lib     port:py-bdist_mpkg \
+                port:py-pyobjc
 
-livecheck.type  regex
 livecheck.url   ${master_sites}
-livecheck.regex "PyXG-(\\d+\\.\\d(\\.\\d+)?)${extract.suffix}"
+livecheck.regex "PyXG-(\\d+\\.\\d+(\\.\\d+)?)"
