py-pyxg, py25-pyxg, py26-pyxg: update to 0.3.0 and indicate this is noarch; see #25777
git-svn-id: https://svn.macports.org/repository/macports/trunk@69928 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-pyxg/Portfile
+++ b/dports/python/py-pyxg/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 PortGroup       python24 1.0
 
 name            py-pyxg
-version         0.2.0
+version         0.3.0
 categories      python devel
 platforms       darwin
 maintainers     snc openmaintainer
@@ -16,13 +16,17 @@ long_description  Xgrid is Apple's solution for running jobs \
                 or within an interactive Python session.
 
 homepage        http://pyxg.scipy.org/
-master_sites    http://pyxg.scipy.org/downloads
+master_sites    http://github.com/downloads/pyxg/pyxg/
 distname        PyXG-${version}
 
-checksums       md5 9611586e60cf872cf47281fd81ccb5e4
+checksums       md5     68331343d353148498872a410597dbbb \
+                sha1    e35da90bc43eaaaef426bebd59abc29f9de0b459 \
+                rmd160  6220811d77fe26e683e72720e4e487916df731fa
 
 depends_lib     port:py-bdist_mpkg \
                 port:py-pyobjc
+
+supported_archs noarch
 
 livecheck.url   ${master_sites}
 livecheck.regex "PyXG-(\\d+\\.\\d+(\\.\\d+)?)"
