--- a/dports/python/py26-pyxg/Portfile
+++ b/dports/python/py26-pyxg/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 PortGroup       python26 1.0
 
 name            py26-pyxg
-version         0.2.0
+version         0.3.0
 categories      python devel
 platforms       darwin
 maintainers     gmail.com:beatrupp openmaintainer
@@ -16,12 +16,16 @@ long_description  Xgrid is Apple's solution for running jobs \
                 or within an interactive Python session.
 
 homepage        http://pyxg.scipy.org/
-master_sites    http://pyxg.scipy.org/downloads
+master_sites    http://github.com/downloads/pyxg/pyxg/
 distname        PyXG-${version}
 
-checksums       md5 9611586e60cf872cf47281fd81ccb5e4
+checksums       md5     68331343d353148498872a410597dbbb \
+                sha1    e35da90bc43eaaaef426bebd59abc29f9de0b459 \
+                rmd160  6220811d77fe26e683e72720e4e487916df731fa
 
 depends_lib     port:py26-pyobjc-cocoa
+
+supported_archs noarch
 
 livecheck.url   ${master_sites}
 livecheck.regex "PyXG-(\\d+\\.\\d+(\\.\\d+)?)"
