ardour2: update to version 2.8.11, add license info and compile error warning on SL. Currently builds on Leopard and Tiger only.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69930 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/ardour2/Portfile
+++ b/dports/audio/ardour2/Portfile
@@ -4,9 +4,10 @@
 PortSystem              1.0
 
 name                    ardour2
-version                 2.8.2
+version                 2.8.11
 distname                ardour-${version}
 maintainers             devans
+license                 GPLv2
 categories              audio x11
 platforms               darwin
 homepage                http://ardour.org/
@@ -29,9 +30,9 @@ use_bzip2               yes
 
 master_sites            macports:ardour2
 
-checksums               md5     054640c746e806be81857754fc72c02e \
-                        sha1    ac3c589b2355211b8ea12f1fba656e66b3007bb4 \
-                        rmd160  6dcb714f8e0a7d4fba497f96918a61fb67318bc7
+checksums               md5     f451a8d0abc133a1700c3932e07a5612 \
+                        sha1    e04f0d9aacd929565386f8027807d881bdf8fca6 \
+                        rmd160  e3567d1f5b8d0eb230b86951b7b8653b4344bff8
 
 depends_build           port:pkgconfig \
                         port:scons
@@ -51,6 +52,7 @@ patchfiles              patch-SConstruct.diff \
                         patch-libs-pbd-mountpoint.cc.diff \
                         patch-libs-pbd-pathscanner.cc.diff \
                         patch-gtk2_ardour-SConscript.diff \
+                        patch-gtk2_ardour-main.cc.diff \
                         patch-gtk2_ardour-nag.cc.diff
 
 post-patch {
@@ -91,6 +93,13 @@ variant gcc44 conflicts gcc43 description {build with gcc 4.4} {
 
 if {![variant_isset gcc43]} {
     default_variants +gcc44
+}
+
+platform darwin 10 {
+    # Broken on SL due to lack of support in scons configuration script.
+    pre-fetch {
+        return -code error "Ardour currently does not compile on Snow Leopard due to lack of support in configuration.  Use Leopard or Tiger and watch for further developments."
+    }
 }
 
 livecheck.type          regex
