Patch to allow epylint to work
git-svn-id: https://svn.macports.org/repository/macports/trunk@69931 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-lint/Portfile
+++ b/dports/python/py-lint/Portfile
@@ -6,6 +6,7 @@ PortGroup           python24 1.0
 
 name                py-lint
 version             0.21.1
+revision            1
 categories-append   devel
 maintainers         dh openmaintainer
 description         Error (and style) checking for python
@@ -20,18 +21,20 @@ long_description \
 platforms           darwin
 
 homepage            http://www.logilab.org/projects/pylint/
-master_sites        ftp://ftp.logilab.org/pub/pylint/
+master_sites        http://ftp.logilab.org/pub/pylint/
 distname            pylint-${version}
-
-livecheck.url       http://ftp.logilab.org/pub/pylint/
-livecheck.type      regex
-livecheck.regex     {pylint-(\d+(?:\.\d+)*)\.tar\.gz} 
 
 checksums           md5     70f82198cde208b9118e81a43f3c7d80 \
                     sha1    e71ba47c1a54839a44f618d7cce5bd716b1a4987 \
                     rmd160  04ec7d4c9b89dd9ff8f41bc453e20c5648b374ea
 
 depends_lib         port:py-logilab-astng port:py-logilab-common
+
+patchfiles          patch-epylint.py.diff
+
+post-patch {
+    reinplace "s|@@MPORTS_PYTHON_BRANCH@@|${python.branch}|" ${worksrcpath}/epylint.py
+}
 
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
@@ -49,3 +52,6 @@ post-destroot {
     }
 }
 
+livecheck.url       http://ftp.logilab.org/pub/pylint/
+livecheck.type      regex
+livecheck.regex     {pylint-(\d+(?:\.\d+)*)\.tar\.gz} 
