--- a/dports/python/py25-lint/Portfile
+++ b/dports/python/py25-lint/Portfile
@@ -6,6 +6,7 @@ PortGroup           python25 1.0
 
 name                py25-lint
 version             0.21.1
+revision            1
 categories-append   devel
 maintainers         dh openmaintainer
 description         Error (and style) checking for python
@@ -20,7 +21,7 @@ long_description \
 platforms           darwin
 
 homepage            http://www.logilab.org/projects/pylint/
-master_sites        ftp://ftp.logilab.org/pub/pylint/
+master_sites        http://ftp.logilab.org/pub/pylint/
 distname            pylint-${version}
 
 checksums           md5     70f82198cde208b9118e81a43f3c7d80 \
@@ -29,12 +30,20 @@ checksums           md5     70f82198cde208b9118e81a43f3c7d80 \
 
 depends_lib         port:py25-logilab-common port:py25-logilab-astng
 
+patchfiles          patch-epylint.py.diff
+
+post-patch {
+    reinplace "s|@@MPORTS_PYTHON_BRANCH@@|${python.branch}|" ${worksrcpath}/epylint.py
+}
+
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
     eval xinstall -m 644 [glob ${worksrcpath}/doc/*] \
         ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} ChangeLog README \
         ${destroot}${prefix}/share/doc/${name}
+
+    # this file is also installed by py25-logilab-common
     file delete ${destroot}${python.pkgd}/logilab/__init__.py
 
     # there is no python.prefix variable for python25 and python24 portgroups
