--- a/dports/python/py26-lint/Portfile
+++ b/dports/python/py26-lint/Portfile
@@ -6,6 +6,7 @@ PortGroup           python26 1.0
 
 name                py26-lint
 version             0.21.1
+revision            1
 categories-append   devel
 maintainers         dh openmaintainer
 description         Error (and style) checking for python
@@ -28,6 +29,12 @@ checksums           md5     70f82198cde208b9118e81a43f3c7d80 \
                     rmd160  04ec7d4c9b89dd9ff8f41bc453e20c5648b374ea
 
 depends_lib         port:py26-logilab-common port:py26-logilab-astng
+
+patchfiles          patch-epylint.py.diff
+
+post-patch {
+    reinplace "s|@@MPORTS_PYTHON_BRANCH@@|${python.branch}|" ${worksrcpath}/epylint.py
+}
 
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
