--- a/dports/cross/arm-elf-gcc/Portfile
+++ b/dports/cross/arm-elf-gcc/Portfile
@@ -3,11 +3,10 @@
 PortSystem			1.0
 
 name            	arm-elf-gcc
-version         	4.3.2
-revision                1
+version         	4.5.0
 
 # Parameters for this port.
-set newlibversion	1.16.0
+set newlibversion	1.18.0
 set crossgcc-target arm-elf
 set default-languages --enable-languages="c,c++,objc"
 
@@ -24,16 +23,15 @@ master_sites		gnu:gcc/gcc-${version}/:gcc \
 distfiles			gcc-${version}.tar.bz2:gcc newlib-${newlibversion}.tar.gz:newlib
 worksrcdir			gcc-${version}
 checksums			gcc-${version}.tar.bz2 \
-                    md5     5dfac5da961ecd5f227c3175859a486d \
-                    sha1    787b566ad4f386a9896e2d5703e6ff5e7ccaca58 \
-                    rmd160  0ced28bd2e0d89f081cf88273b5f1530599b52fb \
+						md5     ff27b7c4a5d5060c8a8543a44abca31f \
+						sha1    4beb8366ce1883f37255aa57f0258e7d3cd13a9b \
+						rmd160  84c9b2bf117ce3e29cba8fa2cd62fa4f8f7f5749 \
 					newlib-${newlibversion}.tar.gz \
-						md5 bf8f1f9e3ca83d732c00a79a6ef29bc4 \
-						sha1 841edec33d19a9e549984982fb92445ee967e265 \
-						rmd160 fa40ff43e858da3093c9f3b5b203724b9b327696
-patchfiles			patch-gcc-config-arm-t-arm-elf.diff \
-					patch-newlib-libc-configure.diff \
-					Make-lang.in.diff
+						md5     3dae127d4aa659d72f8ea8c0ff2a7a20 \
+						sha1    a47d3b8a508304143334b36bdb5b33786a61ce94 \
+						rmd160  69d96fd323a23857072f30cb51899040099857cd
+
+patchfiles			patch-gcc-config-arm-t-arm-elf.diff
 
 # All cross ports violate the mtree layout.
 destroot.violate_mtree	yes
@@ -44,7 +42,8 @@ dist_subdir			gcc
 depends_lib			port:${crossgcc-target}-binutils \
                     port:gmp \
                     port:mpfr \
-                    port:gettext
+                    port:gettext \
+                    port:libmpc
 
 # gcc is .bz2, newlib is .gz.
 # let's extract only gcc with MacPorts infrastructure, we'll do newlib manually.
