--- a/dports/x11/xmore/Portfile
+++ b/dports/x11/xmore/Portfile
@@ -23,6 +23,8 @@ depends_build       port:pkgconfig
 
 depends_lib         port:xorg-libXaw
 
+patchfiles          no-xprint.patch
+
 configure.args      --mandir=${prefix}/share/man --disable-xprint
 
 livecheck.type      regex
