--- a/dports/graphics/djvulibre/Portfile
+++ b/dports/graphics/djvulibre/Portfile
@@ -11,10 +11,10 @@ platforms       darwin
 maintainers     nomaintainer
 
 description     Web centric format and software platform for distributing documents and images.
-long_description            DjVu can advantageously replace PDF, PS, TIFF,JPEG, and GIF for \
+long_description            DjVu can advantageously replace PDF, PS, TIFF, JPEG, and GIF for \
                             distributing scanned documents, digital documents, or high-resolution \
                             pictures. DjVu content downloads faster, displays and renders faster, \
-                            looks nicer on a screen and consume less client resources than competing \
+                            looks nicer onscreen and consumes fewer client resources than competing \
                             formats.
 
 homepage        http://djvu.sourceforge.net/
