py-pyxg, py25-pyxg, py26-pyxg: fix livecheck; see #25777
git-svn-id: https://svn.macports.org/repository/macports/trunk@69940 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-pyxg/Portfile
+++ b/dports/python/py25-pyxg/Portfile
@@ -28,5 +28,5 @@ depends_lib     port:py25-bdist_mpkg \
 
 supported_archs noarch
 
-livecheck.url   ${master_sites}
+livecheck.url   http://github.com/pyxg/pyxg/downloads
 livecheck.regex "PyXG-(\\d+\\.\\d+(\\.\\d+)?)"
