--- a/dports/python/py26-pyxg/Portfile
+++ b/dports/python/py26-pyxg/Portfile
@@ -27,5 +27,5 @@ depends_lib     port:py26-pyobjc-cocoa
 
 supported_archs noarch
 
-livecheck.url   ${master_sites}
+livecheck.url   http://github.com/pyxg/pyxg/downloads
 livecheck.regex "PyXG-(\\d+\\.\\d+(\\.\\d+)?)"
