cross/arm-elf-gcc: Use branch only for filename of binaries
git-svn-id: https://svn.macports.org/repository/macports/trunk@69941 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/arm-elf-gcc/Portfile
+++ b/dports/cross/arm-elf-gcc/Portfile
@@ -4,6 +4,8 @@ PortSystem			1.0
 
 name            	arm-elf-gcc
 version         	4.5.0
+set branch      	[join [lrange [split ${version} .] 0 1] .]
+revision        	1
 
 # Parameters for this port.
 set newlibversion	1.18.0
@@ -152,7 +154,7 @@ configure.args  --infodir='${prefix}/share/info' \
 				--mandir='${prefix}/share/man' \
 				--target=${crossgcc-target} \
 				--program-prefix=${crossgcc-target}- \
-				--program-suffix=-${version} \
+				--program-suffix=-${branch} \
 				--without-included-gettext \
 				--enable-obsolete \
 				--with-newlib \
