devel/valgrind-devel: Fix for Macs with 32-bit only CPU, closes #25684
git-svn-id: https://svn.macports.org/repository/macports/trunk@69942 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/valgrind-devel/Portfile
+++ b/dports/devel/valgrind-devel/Portfile
@@ -6,6 +6,7 @@ name            valgrind-devel
 svn.revision    11208
 set vex_revision 1986
 version         3.6.0-r${svn.revision}
+revision        1
 categories      devel
 platforms       darwin
 maintainers     raimue
@@ -33,6 +34,11 @@ post-fetch {
 use_autoreconf yes
 configure.args  --mandir=${prefix}/share/man \
                 --without-mpicc
+
+# Handle 32-bit only
+if {$build_arch == "i386"} {
+    configure.args-append --enable-only32bit
+}
 
 # valgrind sets up -arch by itself, adding our own interferes with the build
 configure.cc_archflags {}
