pdf2djvu: disable natural language support to fix problem compiling with latest gettext; see #25633
git-svn-id: https://svn.macports.org/repository/macports/trunk@69945 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/pdf2djvu/Portfile
+++ b/dports/graphics/pdf2djvu/Portfile
@@ -29,6 +29,8 @@ depends_lib         port:djvulibre port:poppler port:libiconv
 
 patchfiles          patch-configure.disableGM.diff
 
+configure.args-append --disable-nls
+
 post-destroot {
    xinstall -m 644 -W ${worksrcpath}/doc ${name}.1 \
       ${destroot}${prefix}/share/man/man1
