--- a/dports/java/groovy-devel/Portfile
+++ b/dports/java/groovy-devel/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            groovy-devel
-version         1.7-rc-2
+version         1.8.0-beta-1
 categories      java lang
 maintainers     breskeby
 platforms       darwin
@@ -25,10 +25,9 @@ homepage        http://groovy.codehaus.org/
 conflicts		groovy
 distname        groovy-src-${version}
 master_sites    http://dist.codehaus.org/groovy/distributions/
-checksums       md5     fe49d932a1d86ee415d145605c03e80e \
-                sha1    7647ebfd709953b32d071a489f4feedb5301d037 \
-                rmd160  b9ee76aa0407a2c1c02a3713978dcf0c741c2760
-depends_build   port:apache-ant
+checksums       md5     82f6019676585af5f5cb75cf6dbcafe8 \
+                sha1    a1541e15375e9c5d7f0c87ceb82bdd47925c6c7d \
+                rmd160  145b53c9a56909786fdf77825720776abc2bb457
 depends_lib     bin:java:kaffe			
 use_configure   no
 worksrcdir      groovy-${version}
