pdf2djvu: fix "configure: WARNING: unrecognized options: --disable-dependency-tracking" when building universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@69947 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/pdf2djvu/Portfile
+++ b/dports/graphics/pdf2djvu/Portfile
@@ -31,6 +31,8 @@ patchfiles          patch-configure.disableGM.diff
 
 configure.args-append --disable-nls
 
+configure.universal_args-delete --disable-dependency-tracking
+
 post-destroot {
    xinstall -m 644 -W ${worksrcpath}/doc ${name}.1 \
       ${destroot}${prefix}/share/man/man1
