--- a/dports/graphics/pdf2djvu/Portfile
+++ b/dports/graphics/pdf2djvu/Portfile
@@ -2,8 +2,7 @@
 
 PortSystem          1.0
 name                pdf2djvu
-version             0.5.11
-revision        1
+version             0.7.4
 categories          graphics textproc
 maintainers         nomaintainer
 description         Convert PDF to DjVu
@@ -19,15 +18,15 @@ master_sites        http://pdf2djvu.googlecode.com/files/
 distname            ${name}_${version}
 worksrcdir          ${name}-${version}
 
-checksums           md5     a9f99c1e755c9f3b5136de235c6851ff \
-                    sha1    cad44090306b28112c0652fff1963b4ee91cec78 \
-                    rmd160  708b3cd28ab8337c2dece643e431aa2e51807381
+checksums           md5     fde5e9bdae4f8643a3457be5989acc83 \
+                    sha1    a3e4e13ac3eeb8f1e643d63d7828a0eec6d944f6 \
+                    rmd160  131f015ccedb071da7394ece0a80a5de65bdc11b
 
-depends_build       port:pkgconfig
+depends_build       port:pkgconfig port:gsed
 
-depends_lib         port:djvulibre port:poppler port:libiconv
+depends_lib         port:djvulibre port:poppler port:libiconv port:GraphicsMagick
 
-patchfiles          patch-configure.disableGM.diff
+patchfiles          patch-configure.diff patch-tools-xml2c.diff
 
 configure.args-append --disable-nls
 
