--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100719040503
-set buildhash       g51356a
+set buildstamp      20100723040501
+set buildhash       gf338eb
 version             0.7.5
-revision            9
+revision            10
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    c46b67a31263b77a789dc4f1e92d1f912237a8aa \
-                    rmd160  69fe2acd60a3808fcd449e39f35ebfe894044a96
+checksums           sha1    2c6d5f30812e6acddc5ab47920bbb9f69f627033 \
+                    rmd160  fc5df631bb56e8568cf039f87ab82a6e46486caa
 
 #configure.optflags  -O0
 #configure.cflags-append -g
