--- a/dports/www/squirrelmail/Portfile
+++ b/dports/www/squirrelmail/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                squirrelmail
-version             1.4.20
+version             1.4.21
 categories          www mail php
 license             GPL
 maintainers         snc openmaintainer
@@ -29,9 +29,8 @@ depends_run         port:php5-web \
 
 use_bzip2           yes
 master_sites        sourceforge
-checksums           md5     76aa7963e67edc7cea2be919f51ded72 \
-                    sha1    ea1f8911961685393da2872739a060e0cf1f03f3 \
-                    rmd160  aa4e7f97a0f9eddc207d0f390c6f25dd1e69c16a
+checksums           md5     44d2fe85d6fc3092bf4f11e6e928f9dc \
+                    sha1    8a125ceca939fd4dd957491d17263b1857ddff60
 
 use_configure       no
 
