--- a/dports/kde/kdebase3/Portfile
+++ b/dports/kde/kdebase3/Portfile
@@ -6,7 +6,7 @@ PortSystem              1.0
 
 name                    kdebase3
 version                 3.5.10
-revision                6
+revision                7
 set kdeadmin            kde-admindir-1502
 categories              kde kde3
 maintainers             nomaintainer
@@ -60,7 +60,8 @@ post-extract {
 }
 
 patchfiles              kdebase3-unified.patch \
-                        CVE-2010-0436.patch
+                        CVE-2010-0436.patch \
+                        patch-kcontrol_crypto_crypto.cpp.diff
 
 patch {
     foreach f $patchfiles {
