Update py26-tornado to version 1.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69957 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-tornado/Portfile
+++ b/dports/python/py26-tornado/Portfile
@@ -6,7 +6,7 @@ PortGroup           python26 1.0
 
 name                py26-tornado
 set real_name       tornado
-version             0.2
+version             1.0
 categories-append   www
 maintainers         singingwolfboy openmaintainer
 license             Apache 2.0
@@ -21,11 +21,11 @@ long_description    \
 platforms           darwin
 
 homepage            http://www.tornadoweb.org/
-master_sites        http://www.tornadoweb.org/static/
+master_sites        http://pypi.python.org/packages/source/t/${real_name}
 distname            ${real_name}-${version}
 
-checksums           md5     4704cbf8baab2562c1e648c76de87b60 \
-                    sha1    1b510e6299b093884ca15e7d2be254b81984a988 \
-                    rmd160  8509d76f4f40d16c3f578115661950d5f504b88e
+checksums           md5     5d87f25839af90a2ae5a862a40779e41 \
+                    sha1    859ac9d7c210d45ae5f89a75838acbd23545fe6c \
+                    rmd160  a0d68510d89b5ce84943e48add1bcccaca74ee36
 
 depends_lib-append  port:py26-curl
