--- a/dports/devel/griffon/Portfile
+++ b/dports/devel/griffon/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                griffon
-version             0.3.1
+version             0.9
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel java
 maintainers         breskeby
@@ -20,12 +20,12 @@ long_description    Griffon aims to bring the "coding by convention" paradigm to
 
 homepage            http://griffon.codehaus.org/
 conflicts			griffon-devel
-distname            ${name}-bin-${version}
+distname            ${name}-${version}-bin
 master_sites        http://dist.codehaus.org/griffon/griffon/${branch}.x
 
-checksums           md5 0eff6a7f8acbcf298f2cd381ffcc4352 \
-                    sha1 ca091f3de53cab632166199dad2d6d4adb46905f \
-                    rmd160 634c45c703cdb5101fc3228dc6ebebee0936effe
+checksums           md5 9313e3bf871f656986bf4a1c86745dca \
+                    sha1 e09dd7e8154b3c75aad0f706c4e8e3b7733525d6 \
+                    rmd160 2e0900dfae481379cf7e0aa8a6f0ca351e094a56
 
 worksrcdir          ${name}-${version}
 set workTarget      ""
@@ -36,7 +36,7 @@ build.cmd           true
 
 pre-destroot {
     # Remove extraneous bat files
-    foreach f [glob -directory ${worksrcpath}${workTarget}/bin *.bat] {
+    foreach f [glob -directory ${worksrcpath}/bin *.bat] {
         file delete $f
     }
 }
@@ -46,15 +46,18 @@ destroot    {
     xinstall -m 755 -d ${destroot}${prefix}/share/java/${name}
 
     # Copy over the needed elements of our directory tree
-    file copy ${worksrcpath}/bin                            \
-              ${worksrcpath}/bash                           \
-              ${worksrcpath}/dist                           \
-              ${worksrcpath}/conf                           \
-              ${worksrcpath}/lib                            \
-              ${worksrcpath}/scripts                        \
-              ${worksrcpath}/src                            \
-              ${worksrcpath}/build.properties               \
-              ${destroot}${prefix}/share/java/${name}
+    file copy ${worksrcpath}/ant						\
+              ${worksrcpath}/archetypes					\
+              ${worksrcpath}/bash						\
+              ${worksrcpath}/build.properties			\
+              ${worksrcpath}/bin						\
+              ${worksrcpath}/conf						\
+              ${worksrcpath}/dist						\
+              ${worksrcpath}/lib						\
+              ${worksrcpath}/LICENSE					\
+              ${worksrcpath}/media						\
+              ${worksrcpath}/scripts					\
+              ${destroot}${prefix}/share/java/${name}/
 
     # Symlink programs into the bin directory
     ln -s ${prefix}/share/java/${name}/bin/griffon ${destroot}${prefix}/bin
