FDclone: Version bump to 3.00i.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69959 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/FDclone/Portfile
+++ b/dports/sysutils/FDclone/Portfile
@@ -3,7 +3,7 @@
 PortSystem      1.0
 
 name            FDclone
-version         3.00h
+version         3.00i
 categories      sysutils shells
 maintainers     takanori openmaintainer
 description     File & Directory Maintenance Tool
@@ -15,7 +15,7 @@ master_sites    http://hp.vector.co.jp/authors/VA012337/soft/fd/ \
                 ftp://ftp.unixusers.net/src/fdclone/
 distname        FD-${version}
 patchfiles      patch-Makefile.in.diff
-checksums       rmd160 ac91a14db248b311c4e4d2872013b6aec5823dc0
+checksums       rmd160 4d5a69cc78a404576276d1f1754d4fe72383316f
 
 depends_lib     port:ncurses
 
