cross/arm-elf-gcc: Does not provide fortran
git-svn-id: https://svn.macports.org/repository/macports/trunk@69961 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/arm-elf-gcc/Portfile
+++ b/dports/cross/arm-elf-gcc/Portfile
@@ -13,7 +13,7 @@ set crossgcc-target arm-elf
 set default-languages --enable-languages="c,c++,objc"
 
 description     	gcc cross-compilers for arm-elf, with newlib runtime library.
-long_description	gnu compilers collection (including c++, fortran and objc) for \
+long_description	gnu compilers collection (including c++ and objc) for \
 					arm-elf, with newlib runtime library.
 homepage			http://gcc.gnu.org/
 platforms       	darwin
