--- a/dports/php/php5-html_parse/Portfile
+++ b/dports/php/php5-html_parse/Portfile
@@ -19,7 +19,7 @@ checksums       md5     d19772cb926d775313af0fda207e2a90 \
                 sha1    a287944c9d1e79bed2b9c180f2c76b99cda954ad \
                 rmd160  6e476ca31f0d85eb70bf4f9ce194f7e811d58d4d
 
-depends_lib \
+depends_lib-append \
     port:ekhtml
 
 archcheck.files \
