slocate: use notes, add license, simplify various commands
git-svn-id: https://svn.macports.org/repository/macports/trunk@69968 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/slocate/Portfile
+++ b/dports/sysutils/slocate/Portfile
@@ -6,6 +6,7 @@ name                slocate
 version             3.1
 revision            1
 categories          sysutils
+license             GPL-2
 homepage            http://slocate.trakker.ca/
 description         Secure Locate is a replacement for locate.
 long_description    Secure locate provides a secure way to index and quickly search \
@@ -38,12 +39,12 @@ patchfiles          patch-Makefile \
 use_configure       no
 
 post-patch {
-    reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/src/slocate.h
-    reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/doc/slocate.1
-    reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/src/Makefile
-    reinplace "s|__DESTROOT__|${destroot}|g" ${worksrcpath}/src/Makefile
-    reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/Makefile
-    reinplace "s|__DESTROOT__|${destroot}|g" ${worksrcpath}/Makefile
+    reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/src/slocate.h \
+                                         ${worksrcpath}/doc/slocate.1 \
+                                         ${worksrcpath}/src/Makefile \
+                                         ${worksrcpath}/Makefile
+    reinplace "s|__DESTROOT__|${destroot}|g" ${worksrcpath}/src/Makefile \
+                                             ${worksrcpath}/Makefile
     reinplace "s|__USER__|${install.user}|g" ${worksrcpath}/Makefile
     reinplace "s|__GROUP__|${install.group}|g" ${worksrcpath}/Makefile
 }
@@ -52,20 +53,19 @@ pre-destroot {
     addgroup slocate
 }
 
+destroot.keepdirs   ${destroot}${prefix}/var/db/slocate
 post-destroot {
     xinstall -d -g slocate -o root ${destroot}${prefix}/var/db/slocate
-    system "touch ${destroot}${prefix}/var/db/slocate/.turd"
-    xinstall ${portpath}/files/daily.slocate ${destroot}${prefix}/etc/
+    xinstall ${filespath}/daily.slocate ${destroot}${prefix}/etc/
     reinplace "s|__PREFIX__|${prefix}|g" ${destroot}${prefix}/etc/daily.slocate
 }
 
-post-install {
-    ui_msg "\nslocate's database should be updated on a regular basis. In"
-    ui_msg "${prefix}/etc/daily.slocate, you'll find some lines to put in"
-    ui_msg "/etc/daily.local to update the database on a daily basis (for example)."
-    ui_msg "If you want to disable the weekly update of the system's built-in locate,"
-    ui_msg "edit the file /etc/weekly.\n"
-}
+notes \
+"slocate's database should be updated on a regular basis. In
+${prefix}/etc/daily.slocate, you'll find some lines to put in
+/etc/daily.local to update the database on a daily basis (for example).
+If you want to disable the weekly update of the system's built-in locate,
+edit the file /etc/weekly."
 
 variant universal {
     build.args-append   LDFLAGS="${configure.universal_ldflags}"
