Relinquish maintainership of various ports
git-svn-id: https://svn.macports.org/repository/macports/trunk@69969 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/AquaLess/Portfile
+++ b/dports/aqua/AquaLess/Portfile
@@ -7,7 +7,7 @@ PortGroup       xcode 1.0
 name            AquaLess
 version         1.6
 categories      aqua sysutils
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Cocoa pager similar to less
 
 long_description \
