--- a/dports/cross/spu-binutils/Portfile
+++ b/dports/cross/spu-binutils/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 PortGroup       crossbinutils 1.0
 
 crossbinutils.setup spu 2.20.51.0.5
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 
 checksums       md5     6d2de7cdf7a8389e70b124e3d73b4d37 \
                 sha1    f799736244b3a13a691faf3354a97064b6ad1892 \
