--- a/dports/devel/boost/Portfile
+++ b/dports/devel/boost/Portfile
@@ -8,7 +8,7 @@ version         1.42.0
 license         Boost-1.0
 categories      devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Collection of portable C++ source libraries
 
 long_description \
