--- a/dports/devel/clucene-devel/Portfile
+++ b/dports/devel/clucene-devel/Portfile
@@ -12,7 +12,7 @@ revision        1
 license         Apache-2 LGPL-2.1
 categories      devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     the open-source, C++ search engine
 
 long_description \
