--- a/dports/devel/gecko-sharp2/Portfile
+++ b/dports/devel/gecko-sharp2/Portfile
@@ -7,7 +7,7 @@ name            gecko-sharp2
 set my_name     gecko-sharp-2.0
 version         0.13
 categories      devel
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 description     GeckoSharp is a wrapper for the GtkEmbedMoz widget.
 
