--- a/dports/devel/mono-addins/Portfile
+++ b/dports/devel/mono-addins/Portfile
@@ -7,7 +7,7 @@ name            mono-addins
 version         0.4
 categories      devel
 platforms       darwin
-maintainers     nox
+maintainers     nomaintainer
 description     Mono.Addins is a framework for creating extensible applications
 
 long_description \
