--- a/dports/devel/orocos-kdl/Portfile
+++ b/dports/devel/orocos-kdl/Portfile
@@ -8,7 +8,7 @@ name            orocos-kdl
 version         1.0.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      devel
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Orocos Kinematics and Dynamics
 license         LGPL-2.1
 
