--- a/dports/devel/orocos-rtt/Portfile
+++ b/dports/devel/orocos-rtt/Portfile
@@ -7,7 +7,7 @@ name            orocos-rtt
 version         1.10.2
 platforms       darwin
 categories      devel graphics
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Orocos Real-Time Toolkit
 license         GPLv2
 
