--- a/dports/editors/cedet-devel/Portfile
+++ b/dports/editors/cedet-devel/Portfile
@@ -9,7 +9,7 @@ version         1.0pre6
 revision        1
 categories      editors
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Infrastructure for parser based text analysis in Emacs
 
 long_description \
