--- a/dports/editors/ecb/Portfile
+++ b/dports/editors/ecb/Portfile
@@ -8,7 +8,7 @@ version         2.32
 revision        1
 categories      editors
 platforms       darwin
-maintainers     nox
+maintainers     nomaintainer
 description     Emacs Code Browser
 
 long_description \
