--- a/dports/editors/po-mode.el/Portfile
+++ b/dports/editors/po-mode.el/Portfile
@@ -6,7 +6,7 @@ PortSystem      1.0
 name            po-mode.el
 version         0.17
 categories      editors devel emacs
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 
 description     The 'po' file mode for Emacs
