--- a/dports/gnome/gnome-sharp2/Portfile
+++ b/dports/gnome/gnome-sharp2/Portfile
@@ -9,7 +9,7 @@ version         2.20.0
 revision        1
 categories      gnome devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Gtk bindings for the Mono .NET Development Framework
 
 long_description \
