--- a/dports/graphics/osgswig-devel/Portfile
+++ b/dports/graphics/osgswig-devel/Portfile
@@ -9,7 +9,7 @@ revision        1
 platforms       darwin
 categories      graphics
 license         MIT
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     SWIG based bindings for OpenSceneGraph
 
 long_description \
