--- a/dports/multimedia/XviD/Portfile
+++ b/dports/multimedia/XviD/Portfile
@@ -7,7 +7,7 @@ name                XviD
 version             1.2.2
 categories          multimedia devel
 platforms           darwin sunos
-maintainers         nox openmaintainer
+maintainers         nomaintainer
 description         High performance and high quality MPEG-4 video library
 
 long_description    The Xvid video codec implements MPEG-4 Simple Profile and Advanced \
