--- a/dports/multimedia/libogg/Portfile
+++ b/dports/multimedia/libogg/Portfile
@@ -7,7 +7,7 @@ version         1.2.0
 categories      multimedia
 platforms       darwin
 use_parallel_build  yes
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Ogg Bitstream Library
 
 long_description \
