--- a/dports/news/klibido/Portfile
+++ b/dports/news/klibido/Portfile
@@ -6,7 +6,7 @@ name            klibido
 version         0.2.5
 platforms       darwin
 categories      news
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     KDE Linux Binaries Downloader
 
 long_description \
