--- a/dports/python/py-ply/Portfile
+++ b/dports/python/py-ply/Portfile
@@ -9,7 +9,7 @@ set my_name     ply
 version         3.3
 categories-append   lang devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     lex and yacc implementation for Python
 
 long_description \
