--- a/dports/python/py25-tz/Portfile
+++ b/dports/python/py25-tz/Portfile
@@ -12,7 +12,7 @@ platforms       darwin
 if {[info exists supported_archs]} {
     supported_archs noarch
 }
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     World Timezone Definitions for Python
 
 long_description \
