--- a/dports/python/py26-pycallgraph/Portfile
+++ b/dports/python/py26-pycallgraph/Portfile
@@ -10,7 +10,7 @@ revision        1
 license         GPLv2
 categories-append   devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     A Python module that creates call graphs for Python programs
 
 long_description \
