--- a/dports/python/py26-pyxb/Portfile
+++ b/dports/python/py26-pyxb/Portfile
@@ -6,7 +6,7 @@ PortGroup       python26 1.0
 name            py26-pyxb
 version         1.1.1
 categories      python devel textproc
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 license         Apache-2.0
 description     PyXB: Python XML Schema Bindings
