--- a/dports/science/collada-dom/Portfile
+++ b/dports/science/collada-dom/Portfile
@@ -7,7 +7,7 @@ name            collada-dom
 version         2.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      science devel
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 description     COLLADA Document Object Model (DOM)
 
