--- a/dports/security/rats/Portfile
+++ b/dports/security/rats/Portfile
@@ -7,7 +7,7 @@ name            rats
 version         2.3
 license         GPL-2
 categories      security devel
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 description     Rough Auditing Tool for Security
 
