--- a/dports/shells/zsh-devel/Portfile
+++ b/dports/shells/zsh-devel/Portfile
@@ -8,7 +8,7 @@ set my_name     [strsed ${name} {s/-.*//}]
 version         4.3.10
 categories      shells
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Zsh is a UNIX command interpreter (shell)
 
 long_description \
