--- a/dports/shells/zsh/Portfile
+++ b/dports/shells/zsh/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 name            zsh
 version         4.2.7
 categories      shells
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Zsh is a UNIX command interpreter (shell)
 long_description \
     Zsh is a UNIX command interpreter (shell) which of the standard     \
