--- a/dports/textproc/docbook-xml-5.0/Portfile
+++ b/dports/textproc/docbook-xml-5.0/Portfile
@@ -7,7 +7,7 @@ name            docbook-xml-5.0
 version         [lindex [split $name -] 2]
 categories      textproc
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Version $version of the DocBook XML DTDs
 
 long_description \
