--- a/dports/textproc/ekhtml/Portfile
+++ b/dports/textproc/ekhtml/Portfile
@@ -8,7 +8,7 @@ version         0.3.2
 license         FreeBSD
 categories      textproc devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     El-Kabong is a speedy, yet forgiving, SAX-style HTML parser
 
 long_description \
