--- a/dports/textproc/zorba/Portfile
+++ b/dports/textproc/zorba/Portfile
@@ -9,7 +9,7 @@ version         1.0.0
 license         Apache-2
 categories      textproc devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     The XQuery Processor
 
 long_description \
