--- a/dports/x11/gtk-sharp/Portfile
+++ b/dports/x11/gtk-sharp/Portfile
@@ -8,7 +8,7 @@ version         1.0.10
 revision        5
 categories      x11 devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Gtk bindings for the Mono .NET Development Framework
 
 long_description \
