--- a/dports/audio/libvorbis/Portfile
+++ b/dports/audio/libvorbis/Portfile
@@ -7,7 +7,7 @@ name            libvorbis
 version         1.3.1
 categories      audio
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     The Vorbis General Audio Compression Codec
 
 long_description \
