--- a/dports/devel/ccache/Portfile
+++ b/dports/devel/ccache/Portfile
@@ -6,7 +6,7 @@ name            ccache
 version         2.4
 revision        3
 categories      devel
-maintainers     nox
+maintainers     nomaintainer
 description     object-file caching compiler wrapper
 
 long_description \
