--- a/dports/graphics/OpenSceneGraph-devel/Portfile
+++ b/dports/graphics/OpenSceneGraph-devel/Portfile
@@ -11,7 +11,7 @@ version         2.9.7
 revision        1
 platforms       darwin
 categories      graphics
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 license         OpenSceneGraph-0.0 wxWindows-3 LGPL-2.1
 description     high-performance 3D graphics toolkit
 
