--- a/dports/java/hamcrest-core/Portfile
+++ b/dports/java/hamcrest-core/Portfile
@@ -8,7 +8,7 @@ set my_name     hamcrest
 version         1.2
 categories      java devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     library of matchers for building test expressions
 
 long_description \
