--- a/dports/java/junit/Portfile
+++ b/dports/java/junit/Portfile
@@ -8,7 +8,7 @@ version         4.6
 revision        1
 categories      java devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Java framework for repeatable tests
 
 long_description \
