--- a/dports/python/py26-cvxmod/Portfile
+++ b/dports/python/py26-cvxmod/Portfile
@@ -7,7 +7,7 @@ name            py26-cvxmod
 set my_name     cvxmod
 version         0.4.6
 categories      python math devel
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 license         GPL
 description     Python module for convex optimization 
