--- a/dports/textproc/most/Portfile
+++ b/dports/textproc/most/Portfile
@@ -7,7 +7,7 @@ version         5.0.0a
 revision        1
 categories      textproc
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     powerful paging program
 
 long_description \
