--- a/dports/x11/gtk-sharp2/Portfile
+++ b/dports/x11/gtk-sharp2/Portfile
@@ -9,7 +9,7 @@ version         2.12.9
 set branch      [join [lrange [split ${version} .] 0 1] ""]
 categories      x11 devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     Gtk bindings for the Mono .NET Development Framework
 
 long_description \
