--- a/dports/php/php5-zorba/Portfile
+++ b/dports/php/php5-zorba/Portfile
@@ -10,7 +10,7 @@ php5extension.extensions zorba_api
 license         PHP
 categories      php devel
 platforms       darwin
-maintainers     nox openmaintainer
+maintainers     nomaintainer
 description     PHP support for XQuery
 
 long_description \
