Update mochiweb to latest git revision
git-svn-id: https://svn.macports.org/repository/macports/trunk@69972 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/erlang/mochiweb/Portfile
+++ b/dports/erlang/mochiweb/Portfile
@@ -1,55 +1,40 @@
 # $Id $
 
-PortSystem       1.0
+PortSystem      1.0
 
-name             mochiweb
+name            mochiweb
+epoch           20100724
+version         16f560
+categories      erlang www
+platforms       darwin
+maintainers     nox
+description     MochiWeb is an Erlang library for building lightweight HTTP servers.
 
-set svnrev 87
+long_description \
+    ${description}
 
-epoch            20081010
-version          r${svnrev} ; # project hasn't assigned a version yet
+fetch.type      git
+git.branch      ${version}
+git.url         http://github.com/mochi/mochiweb.git
 
-categories       erlang devel
-maintainers      nomaintainer
-description      MochiWeb is an Erlang library for building lightweight HTTP servers.
-long_description ${description} It contains a JSON library.
-homepage         http://code.google.com/p/mochiweb/
-platforms        darwin
-use_configure    no
-depends_lib      port:erlang
-fetch.type       svn
-svn.url          http://mochiweb.googlecode.com/svn/trunk/
-svn.revision     ${svnrev}
-worksrcdir       trunk
-build.target     all
-set libdir ${destroot}${prefix}/lib/erlang/lib/${name}
-set privdir ${libdir}/priv
-set ebindir ${libdir}/ebin
-set srcdir ${libdir}/src
-destroot.keepdirs ${privdir}/skel/ebin \
-	${privdir}/skel/include \
-	${privdir}/skel/docs \
-	${privdir}/skel/deps
+use_configure no
+build.target-append edoc
+
+set libdir ${prefix}/lib/erlang/lib/${name}
+
 destroot {
-	xinstall -d -m 0755 ${ebindir}
-	eval xinstall -m 0644 [glob ${worksrcpath}/ebin/*.beam] ${ebindir}
+    xinstall -d ${destroot}${libdir}/priv
+    copy ${worksrcpath}/ebin ${destroot}${libdir}/ebin
+    copy ${worksrcpath}/priv/skel ${destroot}${libdir}/priv/skel
+    copy ${worksrcpath}/scripts ${destroot}${libdir}/scripts
+    copy ${worksrcpath}/src ${destroot}${libdir}/src
 
-	system "find ${worksrcpath} -name .svn -type d -exec rm -rf {} \+"
-	xinstall -d -m 0755 ${privdir}
-	copy ${worksrcpath}/priv/skel ${privdir}/skel
-	copy ${worksrcpath}/src ${srcdir}
-
-	set docdir ${destroot}${prefix}/share/doc/${name}
-	xinstall -d -m 0755 ${docdir}
-	eval xinstall -m 0644 [glob ${worksrcpath}/doc/*.html] ${docdir}
-
-	xinstall -m 0664 -W ${worksrcpath} \
-		LICENSE README \
-		${docdir}
-
-	xinstall -m 0644 ${filespath}/README.MacPorts ${docdir}
-
- 	set scriptsdir ${libdir}/scripts
- 	xinstall -d -m 0755 ${scriptsdir}
- 	eval xinstall -m 0755 [glob ${worksrcpath}/scripts/*.erl] ${scriptsdir}
+    set docdir ${prefix}/share/doc/${name}
+    xinstall -d ${destroot}${docdir}
+    xinstall -m 644 -W ${worksrcpath} LICENSE README ${destroot}${docdir}
+    copy ${worksrcpath}/doc ${destroot}${docdir}/html
+    xinstall -m 644 ${filespath}/README.MacPorts ${destroot}${docdir}
 }
+
+test.run yes
+universal_variant no
