Add mochiweb's homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@69973 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/erlang/mochiweb/Portfile
+++ b/dports/erlang/mochiweb/Portfile
@@ -13,6 +13,7 @@ description     MochiWeb is an Erlang library for building lightweight HTTP serv
 long_description \
     ${description}
 
+homepage        http://github.com/mochi/mochiweb
 fetch.type      git
 git.branch      ${version}
 git.url         http://github.com/mochi/mochiweb.git
